@@ -104,14 +104,14 @@ stm8_genInitStartup(FILE * of)
   /* Init static & global variables */
   fprintf (of, "__sdcc_init_data:\n");
   fprintf (of, "; stm8_genXINIT() start\n");
-  fprintf (of, "        ldw x, #0x0000\n");
+  fprintf (of, "\tldw x, #0x0000\n");
   fprintf (of, "00001$:\n");
-  fprintf (of, "        cpw x, #l_INITIALIZER\n");
-  fprintf (of, "        jreq  00002$\n");
-  fprintf (of, "        ld a, (s_INITIALIZER, x)\n");
-  fprintf (of, "        ld (s_INITIALIZED, x), a\n");
-  fprintf (of, "        incw x\n");
-  fprintf (of, "        jp  00001$\n");
+  fprintf (of, "\tcpw x, #l_INITIALIZER\n");
+  fprintf (of, "\tjreq  00002$\n");
+  fprintf (of, "\tld a, (s_INITIALIZER, x)\n");
+  fprintf (of, "\tld (s_INITIALIZED, x), a\n");
+  fprintf (of, "\tincw x\n");
+  fprintf (of, "\tjp  00001$\n");
   fprintf (of, "00002$:\n");
   fprintf (of, "; stm8_genXINIT() end\n");
   fprintf (of, "\t.area GSFINAL\n");
