@@ -43,7 +43,7 @@ void
 testTortureExecute (void)
 {
   char **args;
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined (__SDCC_stm8)
   char input[256];
 #else
   char input[8];
